lab/04-incident-drills/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop-ingress
  namespace: incident-lab
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /shop/health
            pathType: Prefix
            backend:
              service:
                name: api-svc
                port:
                  number: 80
          - path: /shop
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
